# starknet-zig

./: .gitignore  Makefile  build.zig  build.zig.zon  profile.json
src/: benchmarks.zig  lib.zig  main.zig
src/bench/: bench.zig  bench_field.zig
src/crypto/: pedersen_hash.zig  poseidon_hash.zig
src/math/curve/short_weierstrass/: projective.zig
src/math/fields/: arithmetic.zig  biginteger.zig  elliptic_curve.zig  fields.zig  montgomery.zig  prime.zig  starknet.zig
src/math/fields/prime/: prime.h
src/math/fields/prime/prime/: Cargo.toml
src/math/fields/prime/prime/src/: lib.rs
src/math/numprime/: prime.zig  prime2.zig  table.zig
