[package]
name = "prime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
num-bigint = "0.4.5"
num-prime = { version = "0.4.4", features = ["big-int"] }

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
